--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta>
     <title>TEA</title>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="index.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap" rel="stylesheet">
   <body>
 <header>
 
   <div id="logo">
-  <img src="../images/logo-img-1.png" alt="logo">
+  <img src="logo-img-1.png" alt="logo">
   </div>
   <nav class="menuitems">
   <ul>
@@ -39,7 +39,7 @@
 <main>
 <div id="page1">
   <div class="lemon-tea">
-    <img src="../images/greentea.jpg" alt="">
+    <img src="greentea.jpg" alt="">
   </div>
 
   <div class="main-page">
@@ -59,7 +59,7 @@
    </div>
   <div class="teas">
     <div class="gun">
-    <img src="../images/berabera.jpg" alt="">
+    <img src="berabera.jpg" alt="">
     <p>BERA BERA<br>
     <span>***</span>**<br>
         $50 00
@@ -67,21 +67,21 @@
     </div>
 
     <div class="gun">
-    <img src="../images/gunpowder.jpg" alt="">
+    <img src="gunpowder.jpg" alt="">
     <p>GUN POWDER<br>
       <span>***</span>**<br>
         $50 00
     </p>
     </div>
     <div class="gun">
-    <img src="../images/white.jpg" alt="">
+    <img src="white.jpg" alt="">
     <p>WHITE ERTH<br>
       <span>***</span>**<br>
       $50 00
     </p>
     </div>
     <div class="gun">
-    <img src="../images/AssamBetta.jpg" alt="">
+    <img src="AssamBetta.jpg" alt="">
     <p>ASSAM BETTA<br>
       <span>***</span>**<br>
         $50 00
@@ -101,7 +101,7 @@
 </div>
 
 <div class="two-cups">
-  <img src="../images/home-2-img.jpg" alt="">
+  <img src="home-2-img.jpg" alt="">
 </div>
 
 </div>
